TO DO - insegnanti

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <td>  </td>
           <td> Registrazione - passo 3 </td>
           <td> Inserimento dei propri dati scuola: nome figlio, cognome figlio, scuola, classe, con possibilità di aggiungere più figli </td>
-          <td> SI con aggiunta figlio se c'è tempo </td>
+          <td> SI (NO aggiunta figlio ulteriore) </td>
           </tr>
           <tr>
             <td> <b>Homepage</b> </td>
@@ -490,39 +490,39 @@
             <td> <b>Registrazione</b> </td>
             <td> Registrazione - passo 1 (*) </td>
             <td> Inserimento dei propri dati social: caricamento immagine personale, email, password </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Registrazione - passo 2 (*) </td>
             <td> Inserimento dei propri dati anagrafici: nome, cognome, sesso, città </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
           <tr>
             <td> </td>
             <td> Registrazione - passo 3 </td>
             <td> Inserimento dei propri dati scuola: scuola, classe, materie, con possibilità di aggiungere più classi/materie </td>
-            <td> ... </td>
+            <td> SI (NO aggiunta classi/materie ulteriori) </td>
           </tr>
           <tr>
           <tr>
             <td> <b>Homepage</b> </td>
             <td> Lista Insegnanti - Contatta (*) </td>
             <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti (con la possibilità dunque di contattarli tramite chat "asincrona") </td>
-            <td> .... </td>
+            <td> SI lista, NO contatta </td>
           </tr>
           <tr>
             <td> </td>
             <td> Lista Genitori - Contatta (*) </td>
             <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con possibilità di contattarli tramite chat "asincrona"  </td>
-            <td> .... </td>
+            <td> SI lista, NO contatta </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Visualizzazione dei post pubblicati dagli insegnanti (*) </td>
             <td> Il genitore potrà visualizzare giorno dopo giorno i post che verranno pubblicati dai vari insegnanti </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td>  </td>
@@ -534,19 +534,19 @@
             <td>  </td>
             <td> Calendario (*) </td>
             <td> Visualizzazione data odierna con possibilità di aprire il calendario e selezionare una data diversa (per risalire a post datati) </td>
-            <td> .... </td>
+            <td> SI data odierna, NO post datati </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Eventi (*) </td>
             <td> Tramite questo pulsante, l'utente ha accesso all'area dedicata agli eventi</td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Promemoria - notifica eventi (*) </td>
             <td> In questa sezione l'utente visualizza tutti gli eventi del giorno (sia quelli a cui partecipa, sia quelli a cui non partecipa)</td>
-            <td> .... </td>
+            <td> NO </td>
           </tr>
 
           <tr>
@@ -555,48 +555,48 @@
             <td> Nel calendario saranno evidenziati con colori diversi i giorni nei quali è programmato un evento (3 colori diversi per 3 tipologie di eventi diversi)
               Schiacciando su un determinato giorno, si visualizza l'evento relativo a tale giorno, con descrizione annessa. Di default, viene visualizzato l'evento relativo alla data odierna
             </td>
-            <td> ... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Partecipa all'evento (*) </td>
             <td> Agli eventi ai quali si è stati invitati, sotto la descrizione dell'evento, è associato il tasto Partecipa (si aggiornerà in tal modo la sezione "eventi a cui si parteciperà" nella pagina personale dell'utente) </td>
-            <td> ... </td>
+            <td> NO </td>
           </tr>
 
           <tr>
             <td> </td>
             <td> Crea evento (*) </td>
             <td> L'utente ha la possibilità di creare un evento, e di specificarlo al passo successivo </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Crea evento "Scuola" (*) </td>
             <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc ), scegliendo di poterli
               condividere con gli insegnanti o i genitori</td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Condividi evento con  - notifica invito evento (*) </td>
             <td> L'utente può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con solo gli insegnanti, solo i genitori, o entrambi. In base a tale scelta,
               verrà inviata la notifica al relativo tipo di utente (nella sezione news eventi della pagina personale) </td>
-            <td> .... </td>
+            <td> NO </td>
           </tr>
 
           <tr>
             <td> <b>Profilo Personale </b> </td>
             <td> Visualizzazione informazioni personali (*) </td>
             <td> Verranno visualizzate alcune delle informazioni che l'utente ha inserito nella fase di registrazione </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Notifiche Eventi (*) </td>
             <td> L'utente visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
               eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
-            <td> .... </td>
+            <td> NO </td>
           </tr>
           <tr>
             <td> </td>
