SOVRASCRITTURA - creazione funzionalità.html (modifiche errori)

--- a/funzionalità.html
+++ b/funzionalità.html
@@ -299,13 +299,11 @@
                     <td> .... </td>
                 </tr>
                 <tr>
-                <tr>
                     <td> </td>
                     <td> Registrazione - passo 3 </td>
                     <td> Inserimento dei propri dati scuola: scuola, classe, materie, con possibilità di aggiungere più classi/materie </td>
                     <td> .... </td>
                 </tr>
-                <tr>
                 <tr>
                     <td> <b>Homepage</b> </td>
                     <td> Lista Insegnanti - Contatta (*) </td>
@@ -444,7 +442,7 @@
             <h2 id="mockup">Mockup</h2>
 
             <p>Inserire il mockup realizzato con Balsamiq</p>
-
+        </div>
 
 </body>
 </html>
