--- a/concept.html
+++ b/concept.html
@@ -24,12 +24,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="intro.html">Puzzle</a>
+            <a class="navbar-brand" href="index.html">Puzzle</a>
         </div>
 
         <div class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li><a href="intro.html">Intro</a></li>
+                <li><a href="index.html">Intro</a></li>
                 <li class="active"><a href="concept.html">Concept</a></li>
                 <li><a href="funzionalita.html">Funzionalità</a></li>
                 <li><a href="cosaDicono.html">Dicono di noi </a></li>
