cambio barra-navigazione + css

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -13,30 +13,50 @@
 <body>
 
 <!-- navigation bar -->
+<div class="embed-responsive-item" align="center" id="img_puzzle">
+    <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325">
+</div>
 
-<nav class="navbar navbar-inverse">
+<!-- Navigation -->
+<nav class="navbar navbar-default" role="navigation">
     <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
+            <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
             <a class="navbar-brand" href="index.html">Puzzle</a>
         </div>
-
-        <div class="collapse navbar-collapse navbar-right">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Intro</a></li>
-                <li><a href="concept.html">Concept</a></li>
-                <li class="active"> <a href="funzionalita.html">Funzionalità</a></li>
-                <li><a href="cosaDicono.html">Dicono di noi </a></li>
-                <li><a href="noi.html">Chi siamo</a></li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="concept.html">Concept</a>
+                </li>
+                <li>
+                    <a href="funzionalita.html">Funzionalità</a>
+                </li>
+                <li>
+                    <a href="cosaDicono.html">Dicono di noi</a>
+                </li>
+                <li>
+                    <a href="noi.html">Chi siamo</a>
+                </li>
             </ul>
         </div>
+        <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container -->
 </nav>
+
 
 <!-- fine navigation bar -->
 <div class="subsection">
@@ -434,7 +454,9 @@
         </div>
 
 
-        <h3 id="architettura-dellinformazione"> <br> Architettura dell'informazione</h3>
+        <h3 id="architettura-dellinformazione">
+            <br> Architettura dell'informazione
+        </h3>
 
         <!--IMMAGINE FLOWCHART -->
         <a href="images/Puzzle-FlowChart.png">
@@ -444,7 +466,6 @@
         <!--l'attributo <p> aveva la prevalenza sull'immagine -->
         <div class="subsection">
             <h2 id="mockup">Mockup</h2>
-
             <p>Inserire il mockup realizzato con Balsamiq</p>
         </div>
 
