--- a/index.html
+++ b/index.html
@@ -14,53 +14,49 @@
 
 <body>
 <!-- navigation bar -->
+<div class="embed-responsive-item" align="center" id="img_puzzle">
+  <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325">
+</div>
 
-<nav class="navbar navbar-inverse">
+<!-- Navigation -->
+<nav class="navbar navbar-default" role="navigation">
   <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
+      <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
       <a class="navbar-brand" href="index.html">Puzzle</a>
     </div>
-
-    <div class="collapse navbar-collapse navbar-right">
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Intro</a></li>
-        <li><a href="concept.html">Concept</a></li>
-        <li><a href="funzionalita.html">Funzionalità</a></li>
-        <li><a href="cosaDicono.html">Dicono di noi </a></li>
-        <li><a href="noi.html">Chi siamo</a></li>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="concept.html">Concept</a>
+        </li>
+        <li>
+          <a href="funzionalita.html">Funzionalità</a>
+        </li>
+        <li>
+          <a href="cosaDicono.html">Dicono di noi</a>
+        </li>
+        <li>
+          <a href="noi.html">Chi siamo</a>
+        </li>
       </ul>
     </div>
-  </div><!--/.container-->
-</nav><!--/nav-->
-
-
-<!-- INTRO -->
-<!-- Scritta introduttiva: Puzzle jumbotron -->
-
-<div id="intro" class="intro">
-  <div class="jumbotron">
-    <div class="container">
-      <div class="row">
-        <div class="cl-md-6" align="center">
-          <div class="embed-responsive-item">
-            <img src="images/logo/banner2.png" class="img-responsive">
-          </div>
-        </div>
-      </div>
-      <br>
-      <div class="container-fluid text-center">
-        <p> Entra nella classe di tuo figlio! <br> Parla con gli insegnanti e interagisci con gli altri genitori: chiedi consigli o aiuti e organizza con loro nuove attività!</p>
-      </div>
-    </div>
+    <!-- /.navbar-collapse -->
   </div>
-</div>
-
+  <!-- /.container -->
+</nav>
 
 
 <!-- Video introduttivo -->
