--- a/concept.html
+++ b/concept.html
@@ -15,29 +15,50 @@
 <body>
 
 <!-- navigation bar -->
-<nav class="navbar navbar-inverse">
+<div class="embed-responsive-item" align="center" id="img_puzzle">
+    <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325">
+</div>
+
+<!-- Navigation -->
+<nav class="navbar navbar-default" role="navigation">
     <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
+            <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
             <a class="navbar-brand" href="index.html">Puzzle</a>
         </div>
-
-        <div class="collapse navbar-collapse navbar-right">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Intro</a></li>
-                <li class="active"><a href="concept.html">Concept</a></li>
-                <li><a href="funzionalita.html">Funzionalità</a></li>
-                <li><a href="cosaDicono.html">Dicono di noi </a></li>
-                <li><a href="noi.html">Chi siamo</a></li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="concept.html">Concept</a>
+                </li>
+                <li>
+                    <a href="funzionalita.html">Funzionalità</a>
+                </li>
+                <li>
+                    <a href="cosaDicono.html">Dicono di noi</a>
+                </li>
+                <li>
+                    <a href="noi.html">Chi siamo</a>
+                </li>
             </ul>
         </div>
+        <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container -->
 </nav>
+
 
 <!-- fine navigation bar -->
 
