--- a/noi.html
+++ b/noi.html
@@ -11,59 +11,80 @@
 <body>
 
 <!-- navigation bar -->
+<div class="embed-responsive-item" align="center" id="img_puzzle">
+    <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325">
+</div>
 
-<nav class="navbar navbar-inverse">
+<!-- Navigation -->
+<nav class="navbar navbar-default" role="navigation">
     <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
+            <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
             <a class="navbar-brand" href="index.html">Puzzle</a>
         </div>
-
-        <div class="collapse navbar-collapse navbar-right">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Intro</a></li>
-                <li><a href="concept.html">Concept</a></li>
-                <li> <a href="funzionalita.html">Funzionalità</a></li>
-                <li><a href="cosaDicono.html">Dicono di noi </a></li>
-                <li class="active"><a href="noi.html">Chi siamo</a></li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="concept.html">Concept</a>
+                </li>
+                <li>
+                    <a href="funzionalita.html">Funzionalità</a>
+                </li>
+                <li>
+                    <a href="cosaDicono.html">Dicono di noi</a>
+                </li>
+                <li>
+                    <a href="noi.html">Chi siamo</a>
+                </li>
             </ul>
         </div>
+        <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container -->
 </nav>
 
-<!--  fine Navigation bar -->
-
 <!-- Chi Siamo -->
-
-<div id="noi" class="team" align="center">
-    <div class="container" align="center" >
-        <div class="section">
-            <div class="row" align="center">
-                <div class="col-md-4 col-lg-4">
-                    <img src="images/personas/personas-Antonia.jpg" class="img-circle" alt="">
-                    <h4> Pamela Siclari </h4>
-                    <p> s240165 </p>
-                    <p> pamela.sicl@gmail.com </p>
-                </div>
-                <div class="col-md-4 col-lg-4">
-                    <img src="images/personas/personas-Antonia.jpg" class="img-circle" alt="">
-                    <h4> Liliana Scaffidi </h4>
-                    <p> s243945 </p>
-                    <p> liliana.scaffidi@gmail.com </p>
-                </div>
-
-                <div class="col-md-4 col-lg-4">
-                    <img src="images/personas/personas-Antonia.jpg" class="img-circle" alt="">
-                    <h4> Giuseppe Gullotta </h4>
-                    <p> s240165 </p>
-                    <p> giuseppegullotta1994@gmail.com </p>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h4 class="intro-text text-center">Our
+                    <strong>Team</strong>
+                </h4>
+                <hr>
             </div>
+            <div class="col-sm-4 text-center">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <h4>Giuseppe Gullotta
+                    <small>s240165</small>
+                </h4>
+            </div>
+            <div class="col-sm-4 text-center">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <h4>Liliana Scaffidi
+                    <small>s240165</small>
+                </h4>
+            </div>
+            <div class="col-sm-4 text-center">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <h4>Pamela Siclari
+                    <small>s240165</small>
+                </h4>
+            </div>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
