--- a/concept.html
+++ b/concept.html
@@ -16,7 +16,7 @@
 
 <!-- navigation bar -->
 <div class="embed-responsive-item" align="center" id="img_puzzle">
-    <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325">
+    <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325" alt=""/>
 </div>
 
 <!-- Navigation -->
@@ -62,46 +62,55 @@
 
 <!-- fine navigation bar -->
 
-
-<!-- Vision -->
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h2>
-                Vision
-            </h2>
-            <p> Puzzle è il primo Social Network didattico il cui focus non è sui bambini ma sui loro genitori e sul rapporto di questi con gli insegnanti. <br>
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">
+                    <strong>Vision</strong>
+                </h2>
+                <hr>
+            </div>
+            <div class="col-md-6">
+                <img class="img-responsive img-border-left"  alt="" src="images/concept/Inclusione-sociale-s-640x240.jpg" height="240" width="640"/>
+            </div>
+            <div class="col-md-6">
+                <p>
+                Puzzle è il primo Social Network didattico il cui focus non è sui bambini ma sui loro genitori e sul rapporto di questi con gli insegnanti. <br>
                 Nasce dalla necessità di un genitore di poter essere sempre informato sull’avanzamento didattico del proprio bambino,
                 quindi poter entrare in contatto diretto con gli insegnanti, e dall’idea di una cooperazione con gli altri genitori,
-                abbattendo così muri, ostilità e competizioni che possono influire negativamente sui rispettivi figli.<br><br>
-            </p>
-            <p> Il target principale è dunque rappresentato dai genitori di bambini tra i 6 e i 10 anni (frequentanti le scuole elementari), a cui viene data la possibilità di poter interagire tra loro, rimanere informati su ciò che accade ai loro figli durante le lezioni, chiedere consigli o suggerimenti e organizzare attività extra-curriculari (gite, recite scolastiche, gruppi di studio, …). Il fine è far in modo che un supporto tra genitori possa portare a una maggiore collaborazione tra i bambini e renderli, in tal modo, più indipendenti nello studio e nella vita. <br>
-                Un target secondario è invece rappresentato dagli insegnanti, ai quali è richiesto un minimo supporto ai genitori,
-                dunque poter essere contattati direttamente in chat da quest’ultimi e fornire materiale didattico e collegamenti
-                a materiale extra che possa essere di supporto allo studio dei bambini. <br><br>
-            </p>
-            <p>  Altri social networks vengono tutt’oggi utilizzati a questi scopi.
-                Primo fra tutti WhatsApp, utilizzato da molti genitori per tenersi aggiornati sull’avanzamento scolastico dei propri figli,
-                ma che spesso è terreno di pesanti liti e critiche anche nei confronti del corpo docenti.
-                Il problema di fondo, in questo caso, è rappresentato dall’assenza di controllo sui gruppi che porta alla degenerazione di quest’ultimi.
-                Puzzle propone, invece, uno stretto controllo sui contenuti in modo che questi riguardino esclusivamente il mondo scolastico (e non solo) dei bambini. <br>
-                Un altro competitor è un Social Network italiano, Socloo, che si propone come strumento utile a fini didattici, dove
-                gli insegnanti possono caricare contenuti fruibili dai loro alunni.
-                Tuttavia, questo non aggiunge nulla di più rispetto al Registro Elettronico, ad oggi obbligatorio per tutte le scuole italiane,
-                restando debole sul piano social.
-                Puzzle, pur dando la possibilità di caricare avvisi e contenuti a scopi didattici, mette invece al primo posto la socialità tra utenti,
-                spostando il focus dall’interazione studente-insegnante al duplice rapporto genitore-insegnante e genitore-genitore. <br>
-                Allontanandoci dal mondo digitale, un nodo fondamentale è rappresentato da tutte le attività extra-scolastiche
-                che generalmente vengono organizzate con il minimo coinvolgimento da parte di tutti i genitori.
-                Puzzle dà loro la possibilità di intervenire direttamente e di proporre nuove attività.
-                Tra queste, i genitori possono ad esempio organizzare gruppi di studio su determinate materie,
-                oppure organizzare attività ricreative di vario genere. <br><br>
-            </p>
-
+                abbattendo così muri, ostilità e competizioni che possono influire negativamente sui rispettivi figli.
+                </p>
+            </div>
+            <div class="col-lg-12">
+                <p> Il target principale è dunque rappresentato dai genitori di bambini tra i 6 e i 10 anni (frequentanti le scuole elementari), a cui viene data la possibilità di poter interagire tra loro, rimanere informati su ciò che accade ai loro figli durante le lezioni, chiedere consigli o suggerimenti e organizzare attività extra-curriculari (gite, recite scolastiche, gruppi di studio, …). Il fine è far in modo che un supporto tra genitori possa portare a una maggiore collaborazione tra i bambini e renderli, in tal modo, più indipendenti nello studio e nella vita. <br>
+                    Un target secondario è invece rappresentato dagli insegnanti, ai quali è richiesto un minimo supporto ai genitori,
+                    dunque poter essere contattati direttamente in chat da quest’ultimi e fornire materiale didattico e collegamenti
+                    a materiale extra che possa essere di supporto allo studio dei bambini. <br><br>
+                </p>
+                <p>  Altri social networks vengono tutt’oggi utilizzati a questi scopi.
+                    Primo fra tutti WhatsApp, utilizzato da molti genitori per tenersi aggiornati sull’avanzamento scolastico dei propri figli,
+                    ma che spesso è terreno di pesanti liti e critiche anche nei confronti del corpo docenti.
+                    Il problema di fondo, in questo caso, è rappresentato dall’assenza di controllo sui gruppi che porta alla degenerazione di quest’ultimi.
+                    Puzzle propone, invece, uno stretto controllo sui contenuti in modo che questi riguardino esclusivamente il mondo scolastico (e non solo) dei bambini. <br>
+                    Un altro competitor è un Social Network italiano, Socloo, che si propone come strumento utile a fini didattici, dove
+                    gli insegnanti possono caricare contenuti fruibili dai loro alunni.
+                    Tuttavia, questo non aggiunge nulla di più rispetto al Registro Elettronico, ad oggi obbligatorio per tutte le scuole italiane,
+                    restando debole sul piano social.
+                    Puzzle, pur dando la possibilità di caricare avvisi e contenuti a scopi didattici, mette invece al primo posto la socialità tra utenti,
+                    spostando il focus dall’interazione studente-insegnante al duplice rapporto genitore-insegnante e genitore-genitore. <br>
+                    Allontanandoci dal mondo digitale, un nodo fondamentale è rappresentato da tutte le attività extra-scolastiche
+                    che generalmente vengono organizzate con il minimo coinvolgimento da parte di tutti i genitori.
+                    Puzzle dà loro la possibilità di intervenire direttamente e di proporre nuove attività.
+                    Tra queste, i genitori possono ad esempio organizzare gruppi di studio su determinate materie,
+                    oppure organizzare attività ricreative di vario genere. <br><br>
+            </div>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
-
+<!-- Vision -->
 
 <!-- Target -->
 <div class="container">
