--- a/concept.html
+++ b/concept.html
@@ -69,9 +69,11 @@
                 <hr>
                 <h2 class="intro-text text-center">
                     <strong>Vision</strong>
+
                 </h2>
                 <hr>
             </div>
+
             <div class="col-md-6">
                 <img class="img-responsive img-border-left"  alt="" src="images/concept/Inclusione-sociale-s-640x240.jpg" height="240" width="640"/>
             </div>
@@ -89,6 +91,8 @@
                     dunque poter essere contattati direttamente in chat da quest’ultimi e fornire materiale didattico e collegamenti
                     a materiale extra che possa essere di supporto allo studio dei bambini. <br><br>
                 </p>
+            </div>
+            <div class="col-lg-8">
                 <p>  Altri social networks vengono tutt’oggi utilizzati a questi scopi.
                     Primo fra tutti WhatsApp, utilizzato da molti genitori per tenersi aggiornati sull’avanzamento scolastico dei propri figli,
                     ma che spesso è terreno di pesanti liti e critiche anche nei confronti del corpo docenti.
@@ -106,6 +110,14 @@
                     Tra queste, i genitori possono ad esempio organizzare gruppi di studio su determinate materie,
                     oppure organizzare attività ricreative di vario genere. <br><br>
             </div>
+            <div class="col-lg-4">
+                <img src="images/concept/whatsapp-logo-8AE44BBBB0-seeklogo.com.png" height="300"
+                                       width="297"/>
+
+                <img src="images/concept/socloo.png" height="197" width="400"/></div>
+        </div>
+
+
             <div class="clearfix"></div>
         </div>
     </div>
@@ -120,7 +132,7 @@
         </h2>
         <div class="col-md-12">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <div class="thumbnail">
                         <img src="images/personas/personas-Francesca.jpg" class="img-responsive"/>
                         <div class="caption">
@@ -137,7 +149,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <div class="thumbnail">
                         <img src="images/personas/personas-Sara.jpg" class="img-responsive" >
                         <div class="caption">
@@ -154,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <div class="thumbnail">
                         <img src="images/personas/personas-Antonia.jpg" class="img-responsive" >
                         <div class="caption">
@@ -171,7 +183,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <div class="thumbnail">
                         <img src="images/personas/personas-Aurora.jpg" class="img-responsive" >
                         <div class="caption">
