cambiamenti vari css

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -65,7 +65,13 @@
 <div class="container">
         <div class="row">
             <div class="box">
-            <h2 id="funzionalita-e-architettura">Funzionalità e architettura</h2>
+                <div class="col-lg-12">
+                    <hr>
+                    <h4 class="intro-text text-center">
+                        <strong>Funzionalità e architettura</strong>
+                    </h4>
+                    <hr>
+                </div>
 
             <h3 id="funzionalita-complete-del-social-network"> <br> Funzionalità complete del social network</h3>
 
