--- a/cosaDicono.html
+++ b/cosaDicono.html
@@ -61,6 +61,9 @@
 
 <!-- fine navigation bar -->
 
+
+<div class="box">
+
 <div class="subsection">
     <h2 id="valutazione-con-gli-utenti">Valutazione con gli utenti</h2>
 
@@ -85,7 +88,7 @@
 
     <!-- COMMENTO -->
 
-
+</div>
 </div>
 
 </body>
