sistemazione pagina funzionalità

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -71,13 +71,13 @@
                         <strong>Funzionalità e architettura</strong>
                     </h4>
                     <hr>
+                    <br>
                 </div>
 
-            <h3 id="funzionalita-complete-del-social-network"> <br> Funzionalità complete del social network</h3>
+            <h3 id="funzionalita-complete-del-social-network"> <br> <br> Funzionalità complete del social network</h3>
 
         <!--<p>Inserire una tabella in cui sono elencate (ad alto livello) TUTTE le funzionalità del vostro social network, anche quelle che
           non compariranno nel prototipo.</p> -->
-
 
             <p> <br>Targert principale: <b> GENITORI </b> </p>
 
@@ -482,22 +482,34 @@
     <div class="row">
         <div class="box">
 
-        <h3 id="architettura-dellinformazione">
-            <br> Architettura dell'informazione
-        </h3>
+            <hr>
+        <h2 class="intro-text text-center">
+            <strong> Architettura dell'informazione</strong>
+            <hr>
+            <hr>
+        </h2>
 
         <!--IMMAGINE FLOWCHART -->
+            <br>
         <a href="images/Puzzle-FlowChart.png">
-            <img src="images/Puzzle-FlowChart.png" id="schema">
+            <img src="images/Puzzle-FlowChart.png" class="img-responsive center-block" id="schema">
         </a>
         <!--NB: il problema del resize era dato dal fatto che -->
         <!--l'attributo <p> aveva la prevalenza sull'immagine -->
-        <div class="subsection">
-            <h2 id="mockup">Mockup</h2>
-            <p>Inserire il mockup realizzato con Balsamiq</p>
-        </div>
         </div>
     </div>
+</div>
+
+<div class="container">
+<div class="row">
+    <div class="box">
+        <hr>
+    <h2 class="text-center">Mockup</h2>
+        <hr>
+    <p>Inserire il mockup realizzato con Balsamiq</p>
+
+    </div>
+</div>
 </div>
 
 </body>
