--- a/concept.html
+++ b/concept.html
@@ -132,77 +132,106 @@
 <!-- Target -->
 <div class="container">
     <div class="row">
-        <h2>
-            Target
+        <div class="box">
+            <hr>
+        <h2 class="intro-text text-center">
+            <strong>Target </strong>
         </h2>
+            <hr>
+            <br>
+            <br>
         <div class="col-md-12">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="thumbnail">
+                        <br>
+                        <br>
                         <img src="images/personas/personas-Francesca.jpg" class="img-responsive"/>
                         <div class="caption">
+
                             <h3>
                                 Francesca
                             </h3>
+                            <hr>
                             <p> Lavora in uno studio associato di architetti </p>
                             <p> Ha una bambina di 7 anni ma poco tempo libero da dedicarle in settimana </p>
                             <p> E’ appassionata d’arte: le piace visitare gallerie, mostre, musei, … insieme alla figlia e al compagno nel fine settimana </p>
                             <p> Ha un ottimo rapporto con tutte le tecnologie </p>
                             <p>
-                                <a class="btn btn-primary" href="#">Scopri di più</a>
+                                <a class="btn btn-primary center-block" href="#">Scopri di più</a>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="thumbnail">
-                        <img src="images/personas/personas-Sara.jpg" class="img-responsive" >
+                        <img src="images/personas/personas-Sara.jpg" class="img-responsive" height="600" />
                         <div class="caption">
                             <h3>
                                 Sara
                             </h3>
+                            <hr>
                             <p> “Mamma” di professione </p>
                             <p> Dedica tutto il suo tempo ai suoi due bambini </p>
                             <p> Si ritaglia del tempo per sé solo per fare jogging o andare in bicicletta </p>
                             <p> Utilizza il computer per cercare nuove ricette da provare o per aiutare i figli con le ricerche </p>
                             <p>
-                                <a class="btn btn-primary" href="#">Scopri di più</a>
+                                <br>
+                                <br>
+                                <a class="btn btn-primary center-block" href="#">Scopri di più</a>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="images/personas/personas-Antonia.jpg" class="img-responsive" >
                         <div class="caption">
                             <h3>
                                 Antonia
                             </h3>
+                            <hr>
                             <p> Insegna ai bambini di scuola elementare da 23 anni </p>
                             <p> Ha due figli ormai grandi: uno è un avvocato, l’altro studia ancora all’università </p>
                             <p> Ama leggere </p>
                             <p> Si destreggia bene con le nuove tecnologie </p>
+
                             <p>
-                                <a class="btn btn-primary" href="#">Scopri di più</a>
+                                <br>
+                                <br>
+                                <br>
+                                <a class="btn btn-primary center-block" href="#">Scopri di più</a>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-3">
                     <div class="thumbnail">
-                        <img src="images/personas/personas-Aurora.jpg" class="img-responsive" >
+                        <br>
+                        <img src="images/personas/personas-Aurora.jpg" height="300"/>
                         <div class="caption">
                             <h3> Aurora </h3>
+                            <hr>
                             <p> Ha 31 anni e insegna le materie linguistiche alla scuola primaria </p>
                             <p> Nel tempo libero adora viaggiare con gli amici </p>
                             <p> Ama stare a contatto con i bambini </p>
+                            <br>
+                            <br>
+                            <br>
                             <p>
-                                <a class="btn btn-primary" href="#">Scopri di più</a>
+
+                                <br>
+                                <br>
+                                <br>
+
+
+                                <a class="btn btn-primary center-block"  href="#">Scopri di più</a>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
