FUNZIONALITA':  sistemazione tabelle

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -72,21 +72,20 @@
                     </h4>
                     <hr>
                     <br>
+                    <br>
                 </div>
 
-            <h3 id="funzionalita-complete-del-social-network"> <br> <br> Funzionalità complete del social network</h3>
+            <h3> <br> <br> <b> Funzionalità complete del social network </b> </h3>
 
         <!--<p>Inserire una tabella in cui sono elencate (ad alto livello) TUTTE le funzionalità del vostro social network, anche quelle che
           non compariranno nel prototipo.</p> -->
 
-            <p> <br>Targert principale: <b> GENITORI </b> </p>
-
-            <div style="overflow-x:auto"> <!--TABELLE COSTANTI, AGGIUNTA DI CURSORE PER SCORRERE-->
+            <h3> <br> <b> GENITORI </b> </h3>
 
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>Funzionalità complete</th>
+                        <th>Funzionalità </th>
                         <th>Descrizione</th>
                     </tr>
                     </thead>
@@ -112,16 +111,15 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
         <br>
 
-        <p> Targert secondario: <b> INSEGNANTI </b></p>
+        <h3> <b> INSEGNANTI </b></h3>
 
-        <div style="overflow-x:auto"> <!--TABELLE COSTANTI, AGGIUNTA DI CURSORE PER SCORRERE-->
+             <!--TABELLE COSTANTI, AGGIUNTA DI CURSORE PER SCORRERE-->
             <table class="table">
                 <thead>
                 <tr>
-                    <th>Funzionalità complete</th>
+                    <th>Funzionalità </th>
                     <th>Descrizione</th>
                 </tr>
                 </thead>
@@ -138,31 +136,31 @@
                 </tbody>
             </table>
         </div>
-            </div>
         </div>
 </div>
-</div>
+
 
 <div class="container">
     <div class="row">
         <div class="box">
-        <h3 id="funzionalita-da-implementare-dettagliate"> <br> Funzionalità dettagliate da implementare</h3>
 
+        <h3> <br> <b>  Funzionalità dettagliate da implementare </b></h3>
+            <br>
 
     <!--tabella-->
         <p> Con "<b>(*)</b>" sono indicate le funzionalità uguali sia per genitori che per insegnanti </p>
 
-        <div style="overflow-x:auto">
 
+    <br>
             <br>
 
-            <p> Targert principale: <b> GENITORI </b> </p>
+            <h3> <b> GENITORI </b> </h3>
 
             <table class="table">
                 <thead>
                 <tr>
                     <th>Macroarea</th>
-                    <th>Funzionalità specifica</th>
+                    <th>Funzionalità</th>
                     <th>Descrizione</th>
                     <th>To do</th>
                 </tr>
@@ -312,15 +310,16 @@
             </table>
 
         <br>
-
-        <p> Targert secondario: <b> INSEGNANTI </b> </p>
-
+        <br>
+            <br>
+            <br>
+        <h3>  <b> INSEGNANTI </b> </h3>
         <div>
             <table class="table">
                 <thead>
                 <tr>
                     <th> Macroarea </th>
-                    <th> Funzionalità specifica </th>
+                    <th> Funzionalità </th>
                     <th> Descrizione</th>
                     <th>To do</th>
                 </tr>
@@ -486,7 +485,7 @@
         <h2 class="intro-text text-center">
             <strong> Architettura dell'informazione</strong>
             <hr>
-            <hr>
+            <br>
         </h2>
 
         <!--IMMAGINE FLOWCHART -->
