CONCEPT: aggiunta target

--- a/cosaDicono.html
+++ b/cosaDicono.html
@@ -62,33 +62,43 @@
 <!-- fine navigation bar -->
 
 
-<div class="box">
+<div class="container">
+    <div class="row">
+        <div class="box">
 
-<div class="subsection">
-    <h2 id="valutazione-con-gli-utenti">Valutazione con gli utenti</h2>
+            <hr>
+            <h4 class="intro-text text-center">
+                <strong>Valutazione con gli utenti</strong>
+            </h4>
+            <hr>
+            <br>
+            <br>
+            <h3> <b> Profilo degli utenti </b> </h3>
 
-    <h3 id="profilo-degli-utenti">Profilo degli utenti</h3>
+            <p>Descrizione sintetica di tutte le caratteristiche degli utenti che hanno partecipato alla valutazione del prototipo.
+                Tale descrizione deve necessariamente contenere almeno il numero degli utenti, l'età, il genere e le caratteristiche rilevanti nel caso
+                specifico del vostro social network (ad esempio il corso di studio e l'anno se studenti, oppure la professione, oppure gli interessi, ...)</p>
+            <br>
+            <br>
+            <h3> <b> Strumenti della valutazione</b></h3>
 
-    <p>Descrizione sintetica di tutte le caratteristiche degli utenti che hanno partecipato alla valutazione del prototipo.
-        Tale descrizione deve necessariamente contenere almeno il numero degli utenti, l'età, il genere e le caratteristiche rilevanti nel caso
-        specifico del vostro social network (ad esempio il corso di studio e l'anno se studenti, oppure la professione, oppure gli interessi, ...)</p>
+            <p>Questa sezione deve contenere gli strumenti usati durante la valutazione (questionari e/o traccia delle interviste)</p>
+            <br>
+            <br>
+            <h3> <b> Risultato della valutazione </b> </h3>
 
-    <h3 id="strumenti-della-valutazione">Strumenti della valutazione</h3>
+            <p>Questa sezione deve contenere la sintesi dei risultati della valutazione, possibilmente in forma di grafici</p>
+            <br>
+            <br>
+            <h3> <b> Analisi critica e lavoro futuro </b></h3>
 
-    <p>Questa sezione deve contenere gli strumenti usati durante la valutazione (questionari e/o traccia delle interviste)</p>
-
-    <h3 id="risultato-della-valutazione">Risultato della valutazione</h3>
-
-    <p>Questa sezione deve contenere la sintesi dei risultati della valutazione, possibilmente in forma di grafici</p>
-
-    <h3 id="analisi-critica-e-lavoro-futuro">Analisi critica e lavoro futuro</h3>
-
-    <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
-        da implementare nella (ipotetica) seconda versione del prototipo</p>
+            <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
+                da implementare nella (ipotetica) seconda versione del prototipo</p>
 
     <!-- COMMENTO -->
+        </div>
+    </div>
 
-</div>
 </div>
 
 </body>
