--- a/funzionalita.html
+++ b/funzionalita.html
@@ -80,7 +80,7 @@
         <!--<p>Inserire una tabella in cui sono elencate (ad alto livello) TUTTE le funzionalità del vostro social network, anche quelle che
           non compariranno nel prototipo.</p> -->
 
-            <h3> <br> <b> GENITORI </b> </h3>
+            <div class="genitori-insegnanti"> <br> <b> GENITORI </b> </div>
 
                 <table class="table">
                     <thead>
@@ -113,7 +113,7 @@
                 </table>
         <br>
 
-        <h3> <b> INSEGNANTI </b></h3>
+                <div class="genitori-insegnanti"> <br> <b> INSEGNANTI </b> </div>
 
              <!--TABELLE COSTANTI, AGGIUNTA DI CURSORE PER SCORRERE-->
             <table class="table">
@@ -154,7 +154,7 @@
     <br>
             <br>
 
-            <h3> <b> GENITORI </b> </h3>
+            <div class="genitori-insegnanti"> <br> <b> GENITORI </b> </div>
 
             <table class="table">
                 <thead>
@@ -313,7 +313,7 @@
         <br>
             <br>
             <br>
-        <h3>  <b> INSEGNANTI </b> </h3>
+            <div class="genitori-insegnanti"> <br> <b> INSEGNANTI </b> </div>
         <div>
             <table class="table">
                 <thead>
@@ -484,9 +484,8 @@
             <hr>
         <h2 class="intro-text text-center">
             <strong> Architettura dell'informazione</strong>
-            <hr>
-            <br>
         </h2>
+            <br>
 
         <!--IMMAGINE FLOWCHART -->
             <br>
