--- a/concept.html
+++ b/concept.html
@@ -162,8 +162,6 @@
 </div>
 
 <!-- Personas-->
-<!-- Portfolio Grid Section -->
-<section id="personas">
     <div class="container">
         <div class="row">
             <div class="box">
@@ -193,11 +191,9 @@
                                     <p> E’ appassionata d’arte: visita gallerie, mostre, musei, (...)  insieme alla figlia e al compagno nel fine settimana </p>
                                     <p> Ha un ottimo rapporto con tutte le tecnologie </p>
                                    <hr>
-                                    <div class="caption personas-link" href="#francesca" data-toggle="modal">
-                                        <div class="caption-content">
+                                        <div href="#francesca" data-toggle="modal">
                                             <a class="btn btn-primary center-block"> Scopri di più</a>
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -246,19 +242,17 @@
                                     <br>
 
                                  <hr>
-
-                                    <div class="caption personas-link" href="#antonia" data-toggle="modal">
-                                        <div class="caption-content">
+                                        <div href="#antonia" data-toggle="modal">
                                             <a class="btn btn-primary center-block"> Scopri di più</a>
                                         </div>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="thumbnail">
                                 <br>
-                                <img src="images/personas/personas-Aurora.jpg" height="300"/>
+                                <img src="images/personas/personas-Aurora.jpg"/>
                                 <div class="caption">
                                     <h3> <b> Aurora </b> </h3>
                                     <hr>
@@ -270,11 +264,9 @@
                                     <br>
 
                                     <hr>
-                                    <div class="caption personas-link" href="#aurora" data-toggle="modal">
-                                        <div class="caption-content">
+                                        <div  href="#aurora" data-toggle="modal">
                                             <a class="btn btn-primary center-block"> Scopri di più</a>
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -283,7 +275,7 @@
             </div>
         </div>
     </div>
-</section>
+
 
 
 
