css: riordinazione - new

--- a/concept.html
+++ b/concept.html
@@ -118,16 +118,15 @@
                 </div>
                 <div class="col-lg-4">
                     <img class="img-responsive img-border-left center-block" src="images/concept/whatsapp-logo-8AE44BBBB0-seeklogo.com.png"
-                                       width="200"/>
+                                       />
 
-                    <img id= "socloo" class="img-responsive img-border-left center-block" src="images/concept/socloo.png"  width="300"/>
+                    <img id= "socloo" class="img-responsive img-border-left center-block" src="images/concept/socloo.png" />
                 </div>
         </div>
     </div>
-            <div class="clearfix"></div>
 
     </div>
-</div>
+
 <!-- Vision -->
 
 
@@ -216,11 +215,10 @@
                                     <br>
 
                                     <hr>
-                                    <div class="caption personas-link" href="#sara" data-toggle="modal">
-                                        <div class="caption-content">
+
+                                        <div href="#sara" data-toggle="modal">
                                             <a class="btn btn-primary center-block"> Scopri di più</a>
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
