concept: modifiche html

--- a/concept.html
+++ b/concept.html
@@ -300,7 +300,7 @@
                         risposta da parte di un'altra mamma disposta a darle una mano! Le maestre invece non hanno ancora risposto... sa già che passerà del tempo prima
                         che le faranno sapere qualcosa; ma non importa! Per il momento sa che pomeriggio Alice non resterà a scuola ad aspettare da sola: Francesca può
                         andare al meeting tranquilla! <br><br>
-                        <button type="button" class="btn btn-default" data-dismiss="modal"> <i class="fa fa-times"></i> Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"> Chiudi </button>
                     </div>
                 </div>
             </div>
@@ -338,7 +338,7 @@
                         promesso che le avrebbe dato una mano. Preparerà una ciambella probabilmente. E i bambini impareranno divertendosi e socializzando tra loro! Ovviamente
                         anche Andrea e Tommaso si intrufoleranno tra i "grandi"... ma alla fine non è mai troppo presto per imparare l'inglese! <br><br>
 
-                        <button type="button" class="btn btn-default" data-dismiss="modal"> <i class="fa fa-times"></i> Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"> Chiudi </button>
                     </div>
                 </div>
             </div>
@@ -372,7 +372,7 @@
                         modo informale) la giornata scolastica, si diverte talvolta a pubblicare le foto fatte con gli alunni durante le gite scolastiche! Non esistono più le
                         comunicazioni fredde e distaccate attraverso un avviso lasciato sul diario scolastico! Considera i suoi alunni anche un po' figli suoi... e su
                         <i>Puzzle</i> si sente come appartenente ad una grande famiglia! <br><br>
-                        <button type="button" class="btn btn-default" data-dismiss="modal"> <i class="fa fa-times"></i> Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"> Chiudi </button>
                     </div>
                 </div>
             </div>
@@ -405,7 +405,7 @@
                         smartphone e ha registrato un video in cui spiegava i passaggi più significativi dell'ostico esercizio su un foglio di carta, e lo ha caricato tra il suo
                         materiale sul sito. Dopo solo un'ora, ha ricevuto un messaggio di ringraziamento da parte di una mamma a nome di tutti i genitori... e una collega stamattina le ha
                         detto che probabilmente le "ruberà" l'idea! <br><br>
-                        <button type="button" class="btn btn-default" data-dismiss="modal"> <i class="fa fa-times"></i> Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"> Chiudi </button>
                     </div>
                 </div>
             </div>
