--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" >
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,63 +14,69 @@
 
 
 <body>
-<!-- navigation bar -->
-<div class="embed-responsive-item" align="center" id="img_puzzle">
-  <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325">
-</div>
-
-<!-- Navigation -->
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-      <a class="navbar-brand" href="index.html">Puzzle</a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="concept.html">Concept</a>
-        </li>
-        <li>
-          <a href="funzionalita.html">Funzionalità</a>
-        </li>
-        <li>
-          <a href="cosaDicono.html">Dicono di noi</a>
-        </li>
-        <li>
-          <a href="noi.html">Chi siamo</a>
-        </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
+  <!-- Logo -->
+  <div class="embed-responsive-item" align="center" id="img_puzzle">
+    <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
   </div>
-  <!-- /.container -->
-</nav>
+
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+        <a class="navbar-brand" href="index.html">Puzzle</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="concept.html">Concept</a>
+          </li>
+          <li>
+            <a href="funzionalita.html">Funzionalità</a>
+          </li>
+          <li>
+            <a href="cosaDicono.html">Dicono di noi</a>
+          </li>
+          <li>
+            <a href="noi.html">Chi siamo</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
 
 
-<!-- Video introduttivo -->
-<div class="container">
-  <div class="row">
-    <div class="cl-md-6"  align="center">
-      <div id="videoIntro" class="embed-responsive-item">
-        <iframe class="img-rounded" width="560" height="315" src="https://www.youtube.com/embed/NyCst7We6Uw" frameborder="0" allowfullscreen></iframe>
+  <!-- Video introduttivo -->
+  <div class="container">
+    <div class="row">
+      <div class="cl-md-6"  align="center">
+        <div id="videoIntro" class="embed-responsive-item">
+          <iframe class="img-rounded" width="560" height="315" src="https://www.youtube.com/embed/NyCst7We6Uw" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
+
+  <footer class="container-fluid footer-repository">
+    <i>Vai al <a href="https://github.com/SoNet-2017/Puzzle"> <b>repository del sito di presentazione</b> </a> </i>
+
+    <i> oppure al<a href="https://github.com/SoNet-2017/Puzzle-code"> <b>repository del prototipo (codice)</b> </a> </i>
+  </footer>
 
 
 </body>
