--- a/concept.html
+++ b/concept.html
@@ -17,7 +17,7 @@
 
 <!-- navigation bar -->
 <div class="embed-responsive-item" align="center" id="img_puzzle">
-    <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325" alt=""/>
+    <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250" alt=""/>
 </div>
 
 <!-- Navigation -->
@@ -175,9 +175,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="thumbnail">
-                                <br>
-                                <br>
-                                <img src="images/personas/personas-Francesca.jpg" class="img-responsive"/>
+                                <img src="images/personas/1personas-Francesca.jpg" class="img-responsive"/>
                                 <div class="caption">
 
                                     <h3> <b>
@@ -198,7 +196,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="thumbnail">
-                                <img src="images/personas/personas-Sara.jpg" class="img-responsive"  />
+                                <img src="images/personas/2personas-Sara.jpg" class="img-responsive"  />
                                 <div class="caption">
                                     <h3>
                                         <b>
@@ -224,7 +222,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="thumbnail">
-                                <img src="images/personas/personas-Antonia.jpg" class="img-responsive" >
+                                <img src="images/personas/3personas-Antonia.jpg" class="img-responsive" >
                                 <div class="caption">
                                     <h3>
                                         <b>
@@ -249,8 +247,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="thumbnail">
-                                <br>
-                                <img src="images/personas/personas-Aurora.jpg"/>
+                                <img src="images/personas/4personas-Aurora.jpg"/>
                                 <div class="caption">
                                     <h3> <b> Aurora </b> </h3>
                                     <hr>
