--- a/funzionalita.html
+++ b/funzionalita.html
@@ -14,7 +14,7 @@
 
 <!-- navigation bar -->
 <div class="embed-responsive-item" align="center" id="img_puzzle">
-    <img src="images/logo/banner2.png" class="img-responsive" height="130" width="325">
+    <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
 </div>
 
 <!-- Navigation -->
