Modifica Concept: vision + target

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<!-- navigation bar -->
+<!-- Logo -->
 <div class="embed-responsive-item" align="center" id="img_puzzle">
     <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
 </div>
