--- a/noi.html
+++ b/noi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Puzzle - noi</title>
+    <title>Puzzle - chi siamo</title>
     <!-- Link per usare Bootstrap -->
     <link rel="stylesheet" href="styles/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="styles/bootstrap/bootstrap-theme.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<!-- navigation bar -->
+<!-- Logo -->
 <div class="embed-responsive-item" align="center" id="img_puzzle">
     <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
 </div>
