--- a/cosaDicono.html
+++ b/cosaDicono.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Puzzle - Cosa dicono di noi </title>
+    <title>Puzzle - dicono di noi </title>
 
     <!-- Link per usare Bootstrap -->
     <link rel="stylesheet" href="styles/bootstrap/bootstrap.css">
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="styles/custom.css">
 </head>
 <body>
-<!-- navigation bar -->
 
-<!-- navigation bar -->
+<!-- Logo -->
 <div class="embed-responsive-item" align="center" id="img_puzzle">
     <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
 </div>
