Modifica funzionalità e architettura e Inserimento Mockup

--- a/concept.html
+++ b/concept.html
@@ -20,7 +20,7 @@
         <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250" alt=""/>
     </div>
 
-    <!-- Navigation -->
+    <!-- Navigation bar -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -70,8 +70,9 @@
                     <h2 class="intro-text text-center">
                         <strong>Vision</strong>
                     </h2>
-                    <hr>
+                    <hr> <br>
                 </div>
+
 
                 <div class="col-md-4">
                     <br> <br>
@@ -142,7 +143,7 @@
                             <div class="col-lg-4"></div>
                         </div>
                         <br>
-                        <div class="media-bottom text-center"> <p> genitori di bambini frequentanti la scuola primaria </p> </div>
+                        <div class="media-bottom text-center"> <p><b> GENITORI <br> di bambini frequentanti la Scuola Primaria</b> </p> </div>
                     </div>
 
                     <div class="col-lg-6">
@@ -156,7 +157,7 @@
                             <div class="col-lg-4"></div>
                         </div>
                         <br>
-                        <div class="media-bottom text-center"> <p> insegnati della scuola primaria </p> </div>
+                        <div class="media-bottom text-center"> <p><b> INSEGNANTI <br> della Scuola Primaria</b> </p> </div>
                     </div>
 
                 </div>
